--- a/client/styles.css
+++ b/client/styles.css
@@ -165,3 +165,15 @@
 .queue-item:hover {
     background-color: #eee;
 }
+.logo {
+    font-size: 30px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+.logo sup {
+    font-size: 16px;
+}
+.logo img {
+    height: 50px;
+    width: auto;
+}
