toggle for music streaming

--- a/client/styles.css
+++ b/client/styles.css
@@ -145,6 +145,10 @@
 #controls {
     float: left;
 }
+#stream {
+    margin-left: 10px;
+    float: left;
+}
 #mute {
     margin-left: 10px;
     float: left;
