--- a/client/styles.css
+++ b/client/styles.css
@@ -18,6 +18,29 @@
         -ms-transform: translate(-50%,-50%);
         transform: translate(-50%,-50%);
 }
+.thumbnail-overlay {
+    position: absolute;
+    height: 60px;
+    width: 60px;
+    overflow: hidden;
+    float: left;
+    padding: 0px;
+    margin: 0px;
+    margin-right: 10px;
+}
+.thumbnail-overlay img {
+    z-index: 1;
+    opacity: 0.75;
+    position: absolute;
+    border-radius: 4px;
+    left: 50%;
+    top: 50%;
+    height: 100%;
+    width: auto;
+        -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        transform: translate(-50%,-50%);
+}
 .big {
     white-space:nowrap;
     text-overflow:ellipsis;
