--- a/client/styles.css
+++ b/client/styles.css
@@ -84,6 +84,21 @@
 #queue-text {
     font-size: 30px;
 }
+* {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+input, textarea {
+    -webkit-touch-callout:default;
+    -webkit-user-select:text;
+    -moz-user-select:text;
+    -ms-user-select:text;
+    user-select:text;
+}
 .remove {
     float:right;
     margin-left:5px;
