--- a/client/styles.css
+++ b/client/styles.css
@@ -208,6 +208,7 @@ input, textarea {
 }
 #queue {
     padding-top:10px;
+    margin-bottom: 0px;
     clear: both;
 }
 .handle {
@@ -251,7 +252,4 @@ input, textarea {
 }
 .right {
     float: right;
-}
-.fullHeight {
-    height: 100%;
 }
